Changes from QCT jackson change