@@ -24,13 +24,14 @@ import org.apache.ranger.plugin.model.RangerPolicy;
 import org.apache.ranger.plugin.model.RangerServiceDef.RangerResourceDef;
 import org.apache.ranger.plugin.policyengine.RangerAccessRequest.ResourceElementMatchingScope;
 import org.apache.ranger.plugin.util.RangerAccessRequestUtil;
-import org.junit.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Collections;
+
+import org.junit.jupiter.api.Test;
 import java.util.HashMap;
 import java.util.Map;
-
-import static org.junit.Assert.assertEquals;
 
 public class RangerPathResourceMatcherTest {
 
@@ -161,7 +162,7 @@ public class RangerPathResourceMatcherTest {
             RangerAccessRequestUtil.setCurrentUserInContext(evalContext, user);
 
             MatcherWrapper matcher = new MatcherWrapper(policyValue, optWildcard, isRecursive);
-            assertEquals(getMessage(row), result, matcher.isMatch(resource, ResourceElementMatchingScope.SELF, evalContext));
+            assertEquals(result, matcher.isMatch(resource, ResourceElementMatchingScope.SELF, evalContext), getMessage(row));
         }
     }
 
@@ -179,7 +180,7 @@ public class RangerPathResourceMatcherTest {
             RangerAccessRequestUtil.setCurrentUserInContext(evalContext, user);
 
             MatcherWrapper matcher = new MatcherWrapper(policyValue, optWildcard, isRecursive);
-            assertEquals(getMessage(row), result, matcher.isMatch(resource, ResourceElementMatchingScope.SELF_OR_CHILD, evalContext));
+            assertEquals(result, matcher.isMatch(resource, ResourceElementMatchingScope.SELF_OR_CHILD, evalContext), getMessage(row));
         }
     }
 
@@ -199,12 +200,12 @@ public class RangerPathResourceMatcherTest {
             RangerAccessRequestUtil.setCurrentUserInContext(evalContext, user);
 
             MatcherWrapper matcher = new MatcherWrapper(policyValue, optWildcard, isRecursive);
-            assertEquals(getMessage(row), result, matcher.isMatch(resource, matchScope, evalContext));
+            assertEquals(result, matcher.isMatch(resource, matchScope, evalContext), getMessage(row));
         }
     }
 
     String getMessage(Object[] row) {
-        return String.format("Resource=%s, Policy=%s, optWildcard=%s, recursive=%s, result=%s",
+        return "Resource=%s, Policy=%s, optWildcard=%s, recursive=%s, result=%s".formatted(
                 (String)row[0], (String)row[1], (boolean)row[2], (boolean)row[3], (boolean)row[4]);
     }
 
