@@ -21,6 +21,7 @@ package org.apache.ranger.authorization.storm.authorizer;
 
 
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 import org.slf4j.Logger;
@@ -65,8 +66,8 @@ public class RangerStormAuthorizer implements IAuthorizer {
 
 			activatePluginClassLoader();
 
-			rangerStormAuthorizerImpl = cls.newInstance();
-		} catch (Exception e) {
+			rangerStormAuthorizerImpl = cls.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			// check what need to be done
 			LOG.error("Error Enabling RangerStormPlugin", e);
 		} finally {
