@@ -19,14 +19,14 @@
 
 package org.apache.ranger.elasticsearch;
 
-import org.apache.commons.lang.StringUtils;
-import org.apache.http.HttpHost;
-import org.apache.http.auth.AuthSchemeProvider;
-import org.apache.http.client.CredentialsProvider;
-import org.apache.http.client.config.AuthSchemes;
-import org.apache.http.config.Lookup;
-import org.apache.http.config.RegistryBuilder;
-import org.apache.http.impl.auth.SPNegoSchemeFactory;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.hc.core5.http.HttpHost;
+import org.apache.hc.client5.http.auth.AuthSchemeProvider;
+import org.apache.hc.client5.http.auth.CredentialsProvider;
+import org.apache.hc.client5.http.config.AuthSchemes;
+import org.apache.hc.core5.http.config.Lookup;
+import org.apache.hc.core5.http.config.RegistryBuilder;
+import org.apache.hc.client5.http.impl.auth.SPNegoSchemeFactory;
 import org.apache.ranger.audit.destination.ElasticSearchAuditDestination;
 import org.apache.ranger.audit.provider.MiscUtil;
 import org.apache.ranger.authorization.credutils.CredentialsProviderUtil;
@@ -79,7 +79,7 @@ public class ElasticSearchMgr {
 						urls = urls.trim();
 					}
 					if (StringUtils.isBlank(urls) || "NONE".equalsIgnoreCase(urls.trim())) {
-						logger.info(String.format("Clearing URI config value: %s", urls));
+						logger.info("Clearing URI config value: %s".formatted(urls));
 						urls = null;
 					}
 
@@ -101,7 +101,7 @@ public class ElasticSearchMgr {
 	public static RestClientBuilder getRestClientBuilder(String urls, String protocol, String user, String password, int port) {
 		RestClientBuilder restClientBuilder = RestClient.builder(
 				MiscUtil.toArray(urls, ",").stream()
-						.map(x -> new HttpHost(x, port, protocol))
+						.map(x -> new HttpHost(protocol, x, port))
 						.<HttpHost>toArray(i -> new HttpHost[i])
 		);
 		if (StringUtils.isNotBlank(user) && StringUtils.isNotBlank(password) && !user.equalsIgnoreCase("NONE") && !password.equalsIgnoreCase("NONE")) {
